[project]
name = "wismo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "snowflake-connector-python>=3.18.0",
    "snowflake-sqlalchemy>=1.7.7",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
]
